--- a/src/main/resources/hibernate.properties
+++ b/src/main/resources/hibernate.properties
@@ -3,5 +3,5 @@ hibernate.connection.url=jdbc:h2:mem:test
 hibernate.connection.user=sa
 hibernate.connection.password=""
 hibernate.dialect=org.hibernate.dialect.H2Dialect
-hibernate.hbm2ddl.auto=create-drop
+hibernate.hbm2ddl.auto=create
 hibernate.show_sql=true
