changed all infrastructure to using CrudRepository. implemented rest services for all models

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,4 @@
-server.port=8080
-#spring.freemarker.template-loader-path=classpath:/templates/
-# H2
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2
-# Datasource
-spring.datasource.url=jdbc:h2:mem:test
-spring.datasource.username=sa
-spring.datasource.password=""
-spring.datasource.driver-class-name=org.h2.Driver
+server.port = 8080
+java.version=1.8
+logging.level.org.springframework.web=ERROR
+logging.level.com.mkyong=DEBUG
